--- a/app/assets/stylesheets/footer/footer.scss
+++ b/app/assets/stylesheets/footer/footer.scss
@@ -3,6 +3,11 @@
     position: absolute;
 }
 
+.show-footer {
+    position: relative;
+    z-index: 2;
+}
+
 .footer-container {
     display: flex;
     justify-content: space-around;
